# opentelemetry-configuration

./: CHANGELOG.md  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-automerge.yml  release-plz.yml
examples/: basic.rs  configuration_layers.rs
src/: builder.rs  config.rs  error.rs  fallback.rs  guard.rs  lib.rs  rust_detector.rs
tests/: integration_test.rs
